--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="home">h</section>
         <section class="analysis">e</section>
         <section class="budgets">l</section>
-        <section class="account active">
+        <section class="account">
           <header class="account-header">
             <h3>Overall</h3>
             <div class="penny-info">
@@ -189,7 +189,7 @@
             </div>
           </div>
         </section>
-        <section class="categories">
+        <section class="categories active">
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
@@ -198,7 +198,7 @@
                   <div class="left-portion">
                     <img 
                       class="awards"
-                      src="../awards.png"
+                      src="icons/Income-expense/awards.png"
                       alt=""
                     />
                     <p class="change-font-style">Awards</p>
@@ -211,7 +211,7 @@
                   <div class="left-portion">
                     <img
                       class="cupon"
-                      src="../cupon.png"
+                      src="icons/Income-expense/cupon.png"
                       alt=""
                     />
                     <p class="change-font-style">Cupons</p>
@@ -224,7 +224,7 @@
                   <div class="left-portion">
                     <img
                       class="grant"
-                      src="../grants.png"
+                      src="icons/Income-expense/grants.png"
                       alt=""
                     />
                     <p class="change-font-style">Grants</p>
@@ -237,7 +237,7 @@
                   <div class="left-portion">
                     <img
                       class="lottery"
-                      src="../lottery.png"
+                      src="icons/Income-expense/lottery.png"
                       alt=""
                     />
                     <p class="change-font-style">Lottery</p>
@@ -250,7 +250,7 @@
                   <div class="left-portion">
                     <img
                       class="refund"
-                      src="../refunds.png"
+                      src="icons/Income-expense/refunds.png"
                       alt=""
                     />
                     <p class="change-font-style">Refunds</p>
@@ -263,7 +263,7 @@
                   <div class="left-portion">
                     <img
                       class="rent"
-                      src="../rent.png"
+                      src="icons/Income-expense/rent.png"
                       alt=""
                     />
                     <p class="change-font-style">Rental</p>
@@ -276,7 +276,7 @@
                   <div class="left-portion">
                     <img
                       class="salary"
-                      src="../salary.png"
+                      src="icons/Income-expense/salary.png"
                       alt=""
                     />
                     <p class="change-font-style">Salary</p>
@@ -289,7 +289,7 @@
                   <div class="left-portion">
                     <img
                       class="sale"
-                      src="../sales.png"
+                      src="icons/Income-expense/sales.png"
                       alt=""
                     />
                     <p class="change-font-style">Sale</p>
