--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h3>Overall</h3>
             <div class="penny-info">
               <div class="top">
-                <div class=Income-expense               <p>EXPENSE SO FAR</p>
+                <div class="expense">               
+                <p>EXPENSE SO FAR</p>
                   <b class="red bold">-₹5,000</b>
                 </div>
                 <div class="income">
@@ -196,7 +197,7 @@
               <ul>
                 <li>
                   <div class="left-portion">
-                    <img 
+                    <img
                       class="awards"
                       src="icons/Income-expense/awards.png"
                       alt=""
@@ -436,7 +437,11 @@
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="car" src="icons/Income-expense/car.png" alt="" />
+                    <img
+                      class="car"
+                      src="icons/Income-expense/car.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Car</p>
                   </div>
                   <div class="right-portion">
@@ -445,7 +450,14 @@
                 </li>
               </ul>
             </div>
+            <div class="add-category">
+              <div class="add-box">
+                <img class="svg" src="icons/plus.svg" alt="" />
+                <p>ADD NEW CATEGORY</p>
+              </div>
+            </div>
           </div>
+          
         </section>
       </main>
       <footer>
