--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penny Partner</title>
-    <link rel="stylesheet" href="darkmode.css">
+    <link rel="stylesheet" href="darkmode.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="category.css" />
   </head>
@@ -223,7 +223,11 @@
                     <p class="change-font-style">Cupons</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -236,7 +240,11 @@
                     <p class="change-font-style">Grants</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -249,7 +257,11 @@
                     <p class="change-font-style">Lottery</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -262,7 +274,11 @@
                     <p class="change-font-style">Refunds</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -275,7 +291,11 @@
                     <p class="change-font-style">Rental</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -288,7 +308,11 @@
                     <p class="change-font-style">Salary</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
                 <li>
@@ -301,7 +325,11 @@
                     <p class="change-font-style">Sale</p>
                   </div>
                   <div class="right-portion">
-                    <img class="svg" src="icons/dot.svg" alt="" />
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
                   </div>
                 </li>
               </ul>
@@ -549,6 +577,5 @@
     <script async type="module" src="script.js"></script>
     <script defer type="module" src="functions.js"></script>
     <script defer type="module" src="category.js"></script>
-    
   </body>
 </html>
