--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
-        <section class="home">h</section>
+        <section class="home"></section>
         <section class="analysis">e</section>
         <section class="budgets">l</section>
         <section class="account">
