--- a/index.html
+++ b/index.html
@@ -277,46 +277,24 @@
                 />
                 <label for="account-name">Category name</label>
               </div>
-           
+
               <div class="category">
                 <b>Expense</b>
                 <div class="switch"></div>
                 <b>Income</b>
               </div>
             </div>
-            <div class="account-icons-parent">
+            <div class="category-icons-parent">
               <p>Select icons</p>
-              <ul class="account-list">
-                <li class="active">
-                  <img src="Accounts/currency-notes_15326442.png" alt="" />
-                </li>
-                <li><img src="Accounts/atm-card_8983163.png" alt="" /></li>
-                <li>
-                  <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
-                </li>
-                <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
-
-                <li><img src="Accounts/bank.png" alt="" /></li>
-                <li><img src="Accounts/wallet_3258446.png" alt="" /></li>
-                <li><img src="Accounts/canaraBank.png" alt="" /></li>
-                <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
-                <li>
-                  <img src="Accounts/business-target_15326317.png" alt="" />
-                </li>
-                <li><img src="Accounts/indianBank.png" alt="" /></li>
-
-                <li>
-                  <img src="Accounts/currency-exchange_15326510.png" alt="" />
-                </li>
-                <li><img src="Accounts/visa.png" alt="" /></li>
-                <li><img src="Accounts/gpay.png" alt="" /></li>
-                <li><img src="Accounts/economy_3258522.png" alt="" /></li>
-                <li><img src="Accounts/apay.png" alt="" /></li>
-                <li><img src="Accounts/sbi.png" alt="" /></li>
-                <li><img src="Accounts/bank_12161294.png" alt="" /></li>
+              <ul class="category-list">
+                <li><img src="icons/Income-expense/health.jpg" alt="" /></li>
+                <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
+                <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
+                <li><img src="icons/Income-expense/shopping.jpg" alt="" /></li>
               </ul>
+              
             </div>
-            <div class="account-btns">
+            <div class="category-btns">
               <button class="cancel-add-account">cancle</button>
               <button class="save-accont-btn">Save</button>
             </div>
