--- a/index.html
+++ b/index.html
@@ -286,13 +286,36 @@
             </div>
             <div class="category-icons-parent">
               <p>Select icons</p>
-              <ul class="category-list">
-                <li><img src="icons/Income-expense/health.jpg" alt="" /></li>
-                <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
-                <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
-                <li><img src="icons/Income-expense/shopping.jpg" alt="" /></li>
-              </ul>
-              
+              <div class="category-container">
+                <ul class="category-list">
+                  <li><img src="icons/Income-expense/health.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/health.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                  </li>
+                </ul>
+                <ul class="category-list">
+                  <li class="active"><img src="icons/Income-expense/health.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/health.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="category-btns">
               <button class="cancel-add-account">cancle</button>
