--- a/index.html
+++ b/index.html
@@ -301,6 +301,12 @@
                   <li>
                     <img src="icons/Income-expense/cylinder.jpg" alt="" />
                   </li>
+                  <li><img src="icons/Income-expense/haircut.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bike.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cheers.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/box.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bag.jpg" alt="" /></li>
+
                 </ul>
                 <ul class="category-list">
                   <li class="active"><img src="icons/Income-expense/health.jpg" alt="" /></li>
@@ -313,8 +319,14 @@
                   <li><img src="icons/Income-expense/gift.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
                   <li>
-                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                    <img src="icons/Income-expense/sofa.jpg" alt="" />
                   </li>
+                  <li><img src="icons/Income-expense/mobile.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/shoe.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/capsule.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bus.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/batmitan.jpg" alt="" /></li>
+
                 </ul>
               </div>
             </div>
