--- a/index.html
+++ b/index.html
@@ -306,6 +306,16 @@
                   <li><img src="icons/Income-expense/cheers.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/box.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/bag.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/pc.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/list.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/newspaper.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/ring.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/salary.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/paste.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/settlecork.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/paint.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/electricity.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/babyfoot.jpg" alt="" /></li>
 
                 </ul>
                 <ul class="category-list">
@@ -326,6 +336,16 @@
                   <li><img src="icons/Income-expense/capsule.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/bus.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/batmitan.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/dress.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/vacation.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/football.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/education.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/chip.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/apple.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/diamond.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/refunds.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/computer.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/coffee.jpg" alt="" /></li>
 
                 </ul>
               </div>
