--- a/index.html
+++ b/index.html
@@ -316,6 +316,16 @@
                   <li><img src="icons/Income-expense/paint.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/electricity.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/babyfoot.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/handbag.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/insurance.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/scooter.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/gold.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/juice.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bicycle.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/shoppingbag.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/awards.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/social.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/watch.jpg" alt="" /></li>
 
                 </ul>
                 <ul class="category-list">
@@ -346,6 +356,17 @@
                   <li><img src="icons/Income-expense/refunds.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/computer.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/coffee.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/airplane.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/grocessory.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/drinks.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/guitar.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/baby.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cake.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bottle.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/rent.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/car.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/person.jpg" alt="" /></li>
+
 
                 </ul>
               </div>
