--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
                   <li><img src="icons/Income-expense/awards.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/social.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/watch.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/straberry.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/volyball.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/play.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/heartshape.jpg" alt="" /></li>
 
                 </ul>
                 <ul class="category-list">
@@ -366,6 +370,10 @@
                   <li><img src="icons/Income-expense/rent.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/car.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/person.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cricket.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/milk.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/lottery.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/sales.png" alt="" /></li>
 
 
                 </ul>
