--- a/index.html
+++ b/index.html
@@ -294,10 +294,12 @@
                   <li>
                     <img src="icons/Income-expense/home.jpg" alt="" />
                   </li>
-                  <li><img src="icons/Income-expense/shopping.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/books.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/rent.jpg" alt="" /></li>
-                  
+
                   <li>
                     <img src="icons/Income-expense/cylinder.jpg" alt="" />
                   </li>
@@ -308,33 +310,54 @@
                   <li><img src="icons/Income-expense/bag.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/pc.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/list.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/newspaper.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/newspaper.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/ring.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/salary.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/paste.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/settlecork.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/settlecork.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/paint.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/electricity.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/babyfoot.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/electricity.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/babyfoot.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/handbag.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/insurance.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/insurance.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/scooter.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/gold.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/juice.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/bicycle.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/shoppingbag.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shoppingbag.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/awards.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/social.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/watch.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/straberry.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/volyball.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/straberry.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/volyball.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/play.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/heartshape.jpg" alt="" /></li>
-
+                  <li>
+                    <img src="icons/Income-expense/heartshape.jpg" alt="" />
+                  </li>
                 </ul>
                 <ul class="category-list">
-                  <li class="active"><img src="icons/Income-expense/health.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/entertainment.jpg" alt="" /></li>
+                  <li class="active">
+                    <img src="icons/Income-expense/health.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/entertainment.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
                   <li>
                     <img src="icons/Income-expense/phone.jpg" alt="" />
@@ -349,19 +372,33 @@
                   <li><img src="icons/Income-expense/shoe.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/capsule.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/bus.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/batmitan.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/batmitan.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/dress.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/vacation.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/football.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/education.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/vacation.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/football.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/education.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/chip.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/apple.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/diamond.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/refunds.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/computer.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/computer.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/coffee.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/airplane.jpg" alt="" /></li>
-                  <li><img src="icons/Income-expense/grocessory.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/airplane.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/grocessory.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/drinks.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/guitar.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/baby.jpg" alt="" /></li>
@@ -374,13 +411,11 @@
                   <li><img src="icons/Income-expense/milk.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/lottery.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/sales.png" alt="" /></li>
-
-
                 </ul>
               </div>
             </div>
             <div class="category-btns">
-              <button class="cancel-add-account">cancle</button>
+              <button class="cancel-add-category">cancle</button>
               <button class="save-accont-btn">Save</button>
             </div>
           </div>
