--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </div>
           </div>
           <!-- add category -->
-          <div class="category-box-body">
+          <div class="category-box-body active">
             <header><h3>Add New Category</h3></header>
             <div class="input-container">
               <div class="input-body">
@@ -287,8 +287,8 @@
             <div class="category-icons-parent">
               <p>Select icons</p>
               <div class="category-container">
-                <ul class="category-list">
-                  <li><img src="icons/Income-expense/notes.jpg" alt="" /></li>
+                <ul class="category-list top">
+                  <li class="active"><img src="icons/Income-expense/notes.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/cloth.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/food.jpg" alt="" /></li>
                   <li>
@@ -351,8 +351,8 @@
                     <img src="icons/Income-expense/heartshape.jpg" alt="" />
                   </li>
                 </ul>
-                <ul class="category-list">
-                  <li class="active">
+                <ul class="category-list bottom">
+                  <li >
                     <img src="icons/Income-expense/health.jpg" alt="" />
                   </li>
                   <li>
