--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </div>
           </div>
           <!-- add category -->
-          <div class="category-box-body active">
+          <div class="category-box-body">
             <header><h3>Add New Category</h3></header>
             <div class="input-container">
               <div class="input-body">
@@ -285,7 +285,7 @@
               </div>
             </div>
             <div class="category-icons-parent">
-              <p>Select icons</p>
+              <p>Select icon</p>
               <div class="category-container">
                 <ul class="category-list top">
                   <li class="active"><img src="icons/Income-expense/notes.jpg" alt="" /></li>
