--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
                   autocomplete="off"
                   type="text"
                   required
-                  id="account-name"
+                  id="category-name"
                 />
-                <label for="account-name">Category name</label>
+                <label for="category-name">Category name</label>
               </div>
 
               <div class="category">
@@ -416,7 +416,7 @@
             </div>
             <div class="category-btns">
               <button class="cancel-add-category">cancle</button>
-              <button class="save-accont-btn">Save</button>
+              <button class="save-category-btn">Save</button>
             </div>
           </div>
         </section>
