--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
-              <ul>
+              <ul class="income-list">
                 <li>
                   <div class="left-portion">
                     <img src="icons/Income-expense/awards.jpg" alt="" />
@@ -204,7 +204,7 @@
                   <div class="right-portion">
                     <img class="dot svg" src="icons/dot.svg" alt="" />
                     <div class="options">
-                      <p class="edit-btn">Edit</p>
+                      <p class="edit-category-btn">Edit</p>
                       <p class="delete-account">Delete</p>
                     </div>
                   </div>
@@ -218,7 +218,7 @@
                   <div class="right-portion">
                     <img class="dot svg" src="icons/dot.svg" alt="" />
                     <div class="options">
-                      <p class="edit-btn">Edit</p>
+                      <p class="edit-category-btn">Edit</p>
                       <p class="delete-account">Delete</p>
                     </div>
                   </div>
@@ -227,7 +227,7 @@
             </div>
             <div class="expense-category">
               <h3>Expense categories</h3>
-              <ul>
+              <ul class="expense-list">
                 <li>
                   <div class="left-portion">
                     <img src="icons/Income-expense/phone.jpg" alt="" />
@@ -236,7 +236,7 @@
                   <div class="right-portion">
                     <img class="dot svg" src="icons/dot.svg" alt="" />
                     <div class="options">
-                      <p class="edit-btn">Edit</p>
+                      <p class="edit-category-btn">Edit</p>
                       <p class="delete-account">Delete</p>
                     </div>
                   </div>
@@ -250,7 +250,7 @@
                   <div class="right-portion">
                     <img class="dot svg" src="icons/dot.svg" alt="" />
                     <div class="options">
-                      <p class="edit-btn">Edit</p>
+                      <p class="edit-category-btn">Edit</p>
                       <p class="delete-account">Delete</p>
                     </div>
                   </div>
@@ -417,6 +417,161 @@
             <div class="category-btns">
               <button class="cancel-add-category">cancle</button>
               <button class="save-category-btn">Save</button>
+            </div>
+          </div>
+          <!-- edit category -->
+          <div class="edit-category-box-body">
+            <header><h3>Edit Category</h3></header>
+            <div class="input-container">
+              <div class="input-body">
+                <input
+                  autocomplete="off"
+                  type="text"
+                  required
+                  id="edit-category-name"
+                />
+                <label for="category-name">Category name</label>
+              </div>
+
+              <div class="category">
+                <b>Expense</b>
+                <div class="switch"></div>
+                <b>Income</b>
+              </div>
+            </div>
+            <div class="category-icons-parent">
+              <p>Select icon</p>
+              <div class="category-container">
+                <ul class="category-list top">
+                  <li class="active"><img src="icons/Income-expense/notes.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cloth.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/food.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/home.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/shopping.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/books.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/rent.jpg" alt="" /></li>
+
+                  <li>
+                    <img src="icons/Income-expense/cylinder.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/haircut.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bike.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cheers.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/box.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bag.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/pc.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/list.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/newspaper.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/ring.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/salary.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/paste.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/settlecork.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/paint.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/electricity.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/babyfoot.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/handbag.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/insurance.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/scooter.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/gold.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/juice.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bicycle.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/shoppingbag.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/awards.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/social.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/watch.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/straberry.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/volyball.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/play.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/heartshape.jpg" alt="" />
+                  </li>
+                </ul>
+                <ul class="category-list bottom">
+                  <li >
+                    <img src="icons/Income-expense/health.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/entertainment.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/petrol.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/phone.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/train.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/gift.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/beauty.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/sofa.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/mobile.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/shoe.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/capsule.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bus.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/batmitan.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/dress.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/vacation.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/football.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/education.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/chip.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/apple.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/diamond.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/refunds.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/computer.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/coffee.jpg" alt="" /></li>
+                  <li>
+                    <img src="icons/Income-expense/airplane.jpg" alt="" />
+                  </li>
+                  <li>
+                    <img src="icons/Income-expense/grocessory.jpg" alt="" />
+                  </li>
+                  <li><img src="icons/Income-expense/drinks.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/guitar.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/baby.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cake.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/bottle.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/rent.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/car.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/person.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/cricket.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/milk.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/lottery.jpg" alt="" /></li>
+                  <li><img src="icons/Income-expense/sales.png" alt="" /></li>
+                </ul>
+              </div>
+            </div>
+            <div class="category-btns">
+              <button class="cancel-edit-category">cancle</button>
+              <button class="save-edit-category-btn">Save</button>
             </div>
           </div>
         </section>
