--- a/index.html
+++ b/index.html
@@ -223,11 +223,6 @@
                     </div>
                   </div>
                 </li>
-              </ul>
-            </div>
-            <div class="expense-category">
-              <h3>Expense categories</h3>
-              <ul class="expense-list">
                 <li>
                   <div class="left-portion">
                     <img src="icons/Income-expense/phone.jpg" alt="" />
@@ -241,6 +236,12 @@
                     </div>
                   </div>
                 </li>
+              </ul>
+            </div>
+            <div class="expense-category">
+              <h3>Expense categories</h3>
+              <ul class="expense-list">
+                
 
                 <li>
                   <div class="left-portion">
@@ -288,7 +289,9 @@
               <p>Select icon</p>
               <div class="category-container">
                 <ul class="category-list top">
-                  <li class="active"><img src="icons/Income-expense/notes.jpg" alt="" /></li>
+                  <li class="active">
+                    <img src="icons/Income-expense/notes.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/cloth.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/food.jpg" alt="" /></li>
                   <li>
@@ -352,7 +355,7 @@
                   </li>
                 </ul>
                 <ul class="category-list bottom">
-                  <li >
+                  <li>
                     <img src="icons/Income-expense/health.jpg" alt="" />
                   </li>
                   <li>
@@ -432,18 +435,14 @@
                 />
                 <label for="category-name">Category name</label>
               </div>
-
-              <div class="category">
-                <b>Expense</b>
-                <div class="switch"></div>
-                <b>Income</b>
-              </div>
             </div>
             <div class="category-icons-parent">
               <p>Select icon</p>
               <div class="category-container">
                 <ul class="category-list top">
-                  <li class="active"><img src="icons/Income-expense/notes.jpg" alt="" /></li>
+                  <li class="active">
+                    <img src="icons/Income-expense/notes.jpg" alt="" />
+                  </li>
                   <li><img src="icons/Income-expense/cloth.jpg" alt="" /></li>
                   <li><img src="icons/Income-expense/food.jpg" alt="" /></li>
                   <li>
@@ -507,7 +506,7 @@
                   </li>
                 </ul>
                 <ul class="category-list bottom">
-                  <li >
+                  <li>
                     <img src="icons/Income-expense/health.jpg" alt="" />
                   </li>
                   <li>
