--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <li>
                   <div class="left-portion">
                     <img src="icons/Income-expense/awards.jpg" alt="" />
-                    <p class="change-font-style">Grants</p>
+                    <p class="change-font-style">Awards</p>
                   </div>
                   <div class="right-portion">
                     <img class="dot svg" src="icons/dot.svg" alt="" />
@@ -225,8 +225,60 @@
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img src="icons/Income-expense/phone.jpg" alt="" />
-                    <p class="change-font-style">Mobile Recharge</p>
+                    <img src="icons/Income-expense/refunds.jpg" alt="" />
+                    <p class="change-font-style">Refunds</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-category-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img src="icons/Income-expense/lottery.jpg" alt="" />
+                    <p class="change-font-style">Lottery</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-category-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img src="icons/Income-expense/gift.jpg" alt="" />
+                    <p class="change-font-style">Grants</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-category-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img src="icons/Income-expense/rent.jpg" alt="" />
+                    <p class="change-font-style">Rent</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="dot svg" src="icons/dot.svg" alt="" />
+                    <div class="options">
+                      <p class="edit-category-btn">Edit</p>
+                      <p class="delete-account">Delete</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img src="icons/Income-expense/sales.png" alt="" />
+                    <p class="change-font-style">Sale</p>
                   </div>
                   <div class="right-portion">
                     <img class="dot svg" src="icons/dot.svg" alt="" />
@@ -241,8 +293,6 @@
             <div class="expense-category">
               <h3>Expense categories</h3>
               <ul class="expense-list">
-                
-
                 <li>
                   <div class="left-portion">
                     <img src="icons/Income-expense/entertainment.jpg" alt="" />
